# BuzZ

./: .travis.yml  AUTHORS  Makefile.am  README.md  configure.ac  index.html  params.json
include/: buzzData.h  buzzData_pgsql.h  buzzData_stdio.h  buzzInterface.h  buzzValue.h  buzz_facebook.h  buzz_twitter.h
src/: Makefile  Makefile.am  Makefile.in  buzz.h  buzzDataInterface.c  buzzDataInterface.h  buzzData_pgsql.c  buzzData_stdio.c  buzzInterface.c  buzzValue.c  buzz_facebook.c  buzz_twitter.c  libbuzz.la  libbuzz_la-buzzDataInterface.lo  libbuzz_la-buzzData_pgsql.lo  libbuzz_la-buzzData_stdio.lo  libbuzz_la-buzzInterface.lo  libbuzz_la-buzzValue.lo  libbuzz_la-buzz_facebook.lo  libbuzz_la-buzz_twitter.lo
src/.deps/: libbuzz_la-buzzDataInterface.Plo  libbuzz_la-buzzData_pgsql.Plo  libbuzz_la-buzzData_stdio.Plo  libbuzz_la-buzzInterface.Plo  libbuzz_la-buzzValue.Plo  libbuzz_la-buzz_facebook.Plo  libbuzz_la-buzz_twitter.Plo
src/.libs/: libbuzz.la  libbuzz.lai  libbuzz.so.0  libbuzz.so.0.0.0
test/: Makefile.am  facebook.c  test.c
util/: universe.sql
