
SUBDIRS = src
include_HEADERS = include/buzz.h \
                  include/buzzData.h \
                  include/buzzDataInterface.h \
                  include/buzzData_pgsql.h \
                  include/buzzData_stdio.h \
                  include/buzz_facebook.h \
                  include/buzzInterface.h \
                  include/buzz_plus.h \
                  include/buzz_twitter.h \
                  include/buzzValue.h
